# computerGraphics

./: README.md
exercicio01/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.cpp
exercicio01/.cache/clangd/index/: main.cpp.52230F7E6135562A.idx  main.cpp.7AEF16AC3F6F2A42.idx
exercicio02/: CMakeLists.txt  README.md  main  main.cpp
exercicio02/.cache/clangd/index/: main.cpp.0267FF5701319135.idx
exercicio04/: CMakeLists.txt  main  main.cpp
exercicio04-python/: main.py
exercicio04/.cache/clangd/index/: main.cpp.7331905FB4E9AE9E.idx
semestre2exercicio1/: main.py  transformation.py
semestre2exercicio2/: main.py
semestre2exercicio3/: Readme.md  main.cpp
semestre2exercicio4/: CMakeLists.txt  main.cpp
template/: CMakeLists.txt
template-glut-imgui/: CMakeLists.txt  main.cpp
template-imgui/: CMakeLists.txt  main.cpp
